<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowDetailsActivity">
    
    
    <LinearLayout
        android:layout_above="@+id/share"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <LinearLayout
            android:id="@+id/details_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            
            <TextView 
                android:id="@+id/progress_detail"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"/>
            
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal" />
        </LinearLayout>
    
        <HorizontalScrollView
            android:id="@+id/photo_scrolls"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            
            <LinearLayout
                android:id="@+id/photo_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
         </HorizontalScrollView>
        
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <LinearLayout 
                android:background="#FFFFFF"
                android:padding="10dp"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                    
                <RelativeLayout
                   android:background="#DDDDDD"
                   android:layout_gravity="center_horizontal"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:padding="5dp">
                   
                   <RatingBar 
                       android:id="@+id/rating_bar"
                       android:isIndicator="true"
                       android:layout_centerInParent="true"
                       android:layout_width="wrap_content"
                       android:layout_height="40sp"
                       android:rating="0"
                       android:stepSize="0.1"
                       style="@style/customRatingBar" />
                </RelativeLayout>
                   
                <LinearLayout
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                   
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        
                        <TextView
                            android:id="@+id/phone_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="5dp"
                            android:text="@string/phone_number"
                            android:textStyle="bold" />
                        
                        <TextView
                            android:id="@+id/phone_number"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_available" />
                    </LinearLayout>
                    
                    <ImageButton
                        android:id="@+id/call_number"
                        android:contentDescription="@string/call_number"
                        android:layout_width="wrap_content"
                        android:layout_weight="0"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_call" />
                </LinearLayout>
                
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        
                        <TextView
                            android:id="@+id/navigation_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="5dp"
                            android:text="@string/address"
                            android:textStyle="bold" />
                        
                        <TextView
                            android:id="@+id/address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_available" />
                    </LinearLayout>
                    
                    <ImageButton
                        android:id="@+id/start_navigation"
                        android:contentDescription="@string/start_navigation"
                        android:layout_weight="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_action_directions" />
                </LinearLayout>
                
                <ImageView
                    android:id="@+id/place_map"
                    android:contentDescription="@string/place_map"
                    android:paddingTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    
    <Button
        android:id="@+id/share"
        android:drawableRight="@drawable/ic_action_share"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share" />
</RelativeLayout>    